<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context="com.saifniaz.vc.taskforce.MainActivity">


    <TextView
        android:id="@+id/main_Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:textAlignment="center"
        android:textSize="30sp"
        android:fontFamily="sans-serif-smallcaps"
        android:padding="10dp"
        android:textStyle="bold"
        android:text="@string/title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/main_Title"
        android:layout_above="@+id/linearLayout"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/list_task"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orangeLight"
                android:padding="15dp"
                android:onClick="CheckTask"
                android:enabled="false"
                android:text="@string/Example" />

        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:id="@+id/linearLayout">

        <Button
            android:id="@+id/restore"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/restore"
            android:theme="@style/PrimaryButton"
            android:padding="15dp"/>

        <TextView
            android:id="@+id/progress"
            android:textAlignment="center"
            android:padding="15dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="monospace" />

        <Button
            android:id="@+id/add"
            android:theme="@style/PrimaryButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:padding="15dp"
            android:text="@string/add"/>
    </LinearLayout>


</RelativeLayout>
